--- a/packages/app/recovery-cockpit-ui/tsconfig.json
+++ b/packages/app/recovery-cockpit-ui/tsconfig.json
@@ -79,8 +79,7 @@
     },
     {
       "path": "./../../service/recovery-cockpit-constellation-orchestrator/tsconfig.json"
-    }
-    ,
+    },
     {
       "path": "./../../domain/recovery-stress-lab/tsconfig.json"
     },
@@ -89,6 +88,9 @@
     },
     {
       "path": "./../../shared/mesh-control-plane/tsconfig.json"
+    },
+    {
+      "path": "./../../shared/ops-orchestration-runtime/tsconfig.json"
     }
   ]
 }
