--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1127,6 +1127,9 @@
       "path": "./packages/domain/recovery-orchestration-design"
     },
     {
+      "path": "./packages/shared/ops-orchestration-runtime"
+    },
+    {
       "path": "./packages/domain/recovery-lab-orchestration-core"
     },
     {
