feat: expand typed orchestration cockpit stress modules

--- a/packages/service/recovery-cockpit-orchestrator/package.json
+++ b/packages/service/recovery-cockpit-orchestrator/package.json
@@ -22,6 +22,7 @@
     "@data/recovery-cockpit-insights": "workspace:*",
     "@data/recovery-cockpit-store": "workspace:*",
     "@shared/util": "workspace:*",
-    "@shared/result": "workspace:*"
+    "@shared/result": "workspace:*",
+    "@shared/typed-orchestration-core": "workspace:*"
   }
 }
