--- a/packages/service/recovery-cockpit-orchestrator/tsconfig.json
+++ b/packages/service/recovery-cockpit-orchestrator/tsconfig.json
@@ -35,6 +35,9 @@
     },
     {
       "path": "./../../shared/result/tsconfig.json"
+    },
+    {
+      "path": "./../../shared/typed-orchestration-core/tsconfig.json"
     }
   ]
 }
