--- a/packages/infrastructure/recovery-scenario-notifier/tsconfig.json
+++ b/packages/infrastructure/recovery-scenario-notifier/tsconfig.json
@@ -10,6 +10,9 @@
   ],
   "references": [
     {
+      "path": "./../../domain/recovery-scenario-planner/tsconfig.json"
+    },
+    {
       "path": "./../../shared/type-level/tsconfig.json"
     },
     {
