feat: expand temporal orchestration playground and generation flow

--- a/packages/app/recovery-console/package.json
+++ b/packages/app/recovery-console/package.json
@@ -115,6 +115,10 @@
     "@data/recovery-synthetic-orchestration-store": "workspace:*",
     "@service/recovery-synthetic-orchestrator": "workspace:*",
     "@domain/recovery-stress-lab-intelligence": "workspace:*",
-    "@domain/recovery-orchestration-design": "workspace:*"
+    "@domain/recovery-orchestration-design": "workspace:*",
+    "@data/recovery-temporal-store": "workspace:*",
+    "@domain/recovery-temporal-orchestration": "workspace:*",
+    "@service/recovery-temporal-orchestrator": "workspace:*",
+    "@shared/temporal-ops-runtime": "workspace:*"
   }
 }
