--- a/.github/workflows/compiler-bench.yml
+++ b/.github/workflows/compiler-bench.yml
@@ -2,7 +2,7 @@ name: Compiler Bench
 
 on:
   push:
-    branches: ["master", "main"]
+    branches: ["master"]
   pull_request:
   workflow_dispatch:
 
