--- a/packages/domain/recovery-lab-signal-studio/package.json
+++ b/packages/domain/recovery-lab-signal-studio/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@shared/lab-simulation-kernel": "workspace:*",
-    "@shared/type-level": "workspace:*"
+    "@shared/type-level": "workspace:*",
+    "zod": "^3.24.0"
   }
 }
