--- a/packages/service/recovery-lab-orchestrator/tsconfig.json
+++ b/packages/service/recovery-lab-orchestrator/tsconfig.json
@@ -14,6 +14,7 @@
     { "path": "./../../data/recovery-lab-simulation-store/tsconfig.json" },
     { "path": "./../../shared/recovery-lab-kernel/tsconfig.json" },
     { "path": "./../../shared/result/tsconfig.json" },
-    { "path": "./../../shared/type-level/tsconfig.json" }
+    { "path": "./../../shared/type-level/tsconfig.json" },
+    { "path": "./../../domain/recovery-lab-signal-studio/tsconfig.json" }
   ]
 }
