fix(typed-orchestration): reconcile plugin lattice typing and stabilize studio engine

--- a/packages/service/recovery-orchestration-studio-engine/package.json
+++ b/packages/service/recovery-orchestration-studio-engine/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@shared/core": "workspace:*",
+    "@shared/typed-orchestration-core": "workspace:*",
     "@shared/orchestration-kernel": "workspace:*",
     "@domain/recovery-orchestration-design": "workspace:*"
   }
