--- a/packages/service/recovery-orchestration-studio-engine/tsconfig.json
+++ b/packages/service/recovery-orchestration-studio-engine/tsconfig.json
@@ -13,6 +13,9 @@
       "path": "./../../shared/core/tsconfig.json"
     },
     {
+      "path": "./../../shared/typed-orchestration-core/tsconfig.json"
+    },
+    {
       "path": "./../../shared/orchestration-kernel/tsconfig.json"
     },
     {
