--- a/packages/app/recovery-cockpit-ui/package.json
+++ b/packages/app/recovery-cockpit-ui/package.json
@@ -31,6 +31,7 @@
     "@service/recovery-cockpit-intent-orchestrator": "workspace:*",
     "@shared/util": "workspace:*",
     "@shared/ops-orchestration-runtime": "workspace:*",
+    "@service/recovery-orchestration-studio-engine": "workspace:*",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "@types/react": "^19.0.0",
