--- a/packages/app/recovery-cockpit-ui/tsconfig.json
+++ b/packages/app/recovery-cockpit-ui/tsconfig.json
@@ -39,6 +39,9 @@
       "path": "./../../service/recovery-cockpit-intent-orchestrator/tsconfig.json"
     },
     {
+      "path": "./../../service/recovery-orchestration-studio-engine/tsconfig.json"
+    },
+    {
       "path": "./../../shared/util/tsconfig.json"
     },
     {
