feat(resilience): expand synthetic TypeScript stress modules and frontend lab

--- a/packages/app/fulfillment-console/package.json
+++ b/packages/app/fulfillment-console/package.json
@@ -17,7 +17,11 @@
     "@service/fulfillment-planner": "workspace:*",
     "@service/fulfillment-intelligence-orchestrator": "workspace:*",
     "@domain/fulfillment-orchestration-analytics": "workspace:*",
-    "@data/fulfillment-telemetry-store": "workspace:*",
+    "@domain/recovery-resilience-models": "workspace:*",
+    "@service/recovery-resilience-orchestrator": "workspace:*",
+    "@data/recovery-resilience-store": "workspace:*",
+    "@shared/type-level": "workspace:*",
+    "@shared/recovery-ops-runtime": "workspace:*",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "@types/react": "^19.0.0",
