feat: expand tsz quantum orchestration domain data runtime stack

--- a/packages/app/recovery-console/package.json
+++ b/packages/app/recovery-console/package.json
@@ -116,6 +116,9 @@
     "@data/recovery-synthetic-orchestration-store": "workspace:*",
     "@service/recovery-synthetic-orchestrator": "workspace:*",
     "@domain/recovery-stress-lab-intelligence": "workspace:*",
+    "@domain/recovery-quantum-orchestration": "workspace:*",
+    "@data/recovery-quantum-store": "workspace:*",
+    "@shared/recovery-quantum-runtime": "workspace:*",
     "@domain/recovery-orchestration-design": "workspace:*",
     "@data/recovery-temporal-store": "workspace:*",
     "@domain/recovery-temporal-orchestration": "workspace:*",
