feat: expand recovery playbook automation with advanced TS/React modules

--- a/packages/app/recovery-playbook-orchestrator/package.json
+++ b/packages/app/recovery-playbook-orchestrator/package.json
@@ -14,10 +14,38 @@
     "build": "tsc -b"
   },
   "dependencies": {
+    "@service/adaptive-ops-runner": "workspace:*",
+    "@service/adaptive-ops-orchestrator": "workspace:*",
+    "@domain/adaptive-ops": "workspace:*",
+    "@domain/adaptive-ops-metrics": "workspace:*",
+    "@service/recovery-incident-command-orchestrator": "workspace:*",
+    "@domain/incident-command-models": "workspace:*",
+    "@data/incident-command-store": "workspace:*",
+    "@service/recovery-readiness-orchestrator": "workspace:*",
+    "@data/recovery-readiness-store": "workspace:*",
+    "@domain/recovery-readiness": "workspace:*",
+    "@service/recovery-workload-orchestrator": "workspace:*",
+    "@domain/recovery-workload-intelligence": "workspace:*",
+    "@data/recovery-workload-store": "workspace:*",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "@domain/recovery-operations-control-plane": "workspace:*",
+    "@service/recovery-horizon-orchestrator": "workspace:*",
+    "@domain/recovery-horizon-engine": "workspace:*",
+    "@data/recovery-horizon-store": "workspace:*",
+    "@domain/recovery-stress-lab": "workspace:*",
+    "@service/recovery-lattice-orchestrator": "workspace:*",
+    "@domain/recovery-lattice": "workspace:*",
+    "@service/recovery-incident-intent-orchestrator": "workspace:*",
     "@service/recovery-playbook-engine": "workspace:*",
     "@data/recovery-playbook-store": "workspace:*",
     "@domain/recovery-playbooks": "workspace:*",
     "@shared/result": "workspace:*",
+    "@domain/recovery-playbook-orchestration-core": "workspace:*",
+    "@service/recovery-playbook-automation-engine": "workspace:*",
+    "@data/recovery-playbook-automation-store": "workspace:*",
     "zod": "^3.24.0"
   }
 }
