feat: add recovery scenario design orchestrator package with diagnostics and pipeline capabilities
- Introduced `packages/service/recovery-scenario-design-orchestrator` with types and configurations for diagnostics.
- Implemented diagnostic records, results, and payloads for better tracking and analysis.
- Created a catalog of stages with associated metadata and validation using Zod.
- Developed a pipeline system to manage stage execution and reporting.
- Added registry for scenario plugins to facilitate extensibility and management.
- Established runtime context for scenario execution with performance metrics.
- Updated TypeScript configurations for new packages and ensured proper references.
- Enhanced shared types and utilities for better type safety and reusability across packages.

--- a/packages/app/recovery-incident-dashboard/tsconfig.json
+++ b/packages/app/recovery-incident-dashboard/tsconfig.json
@@ -173,6 +173,9 @@
       "path": "./../../shared/type-level/tsconfig.json"
     },
     {
+      "path": "./../../shared/scenario-design-kernel/tsconfig.json"
+    },
+    {
       "path": "./../../shared/recovery-orchestration-runtime/tsconfig.json"
     },
     {
@@ -180,6 +183,12 @@
     },
     {
       "path": "./../../service/recovery-horizon-orchestrator/tsconfig.json"
+    },
+    {
+      "path": "./../../service/recovery-scenario-design-orchestrator/tsconfig.json"
+    },
+    {
+      "path": "./../../domain/recovery-scenario-design/tsconfig.json"
     }
   ]
 }
