--- a/packages/app/recovery-incident-dashboard/package.json
+++ b/packages/app/recovery-incident-dashboard/package.json
@@ -75,6 +75,8 @@
     "@domain/recovery-horizon-studio-core": "workspace:*",
     "@service/recovery-intent-graph-orchestrator": "workspace:*",
     "@service/recovery-chaos-lab-console-orchestrator": "workspace:*",
-    "@shared/recovery-orchestration-runtime": "workspace:*"
+    "@shared/scenario-design-kernel": "workspace:*",
+    "@shared/recovery-orchestration-runtime": "workspace:*",
+    "@service/recovery-scenario-design-orchestrator": "workspace:*"
   }
 }
