--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1320,6 +1320,15 @@
     },
     {
       "path": "./packages/service/recovery-scenario-design-orchestrator"
+    },
+    {
+      "path": "./packages/shared/cascade-orchestration-kernel"
+    },
+    {
+      "path": "./packages/domain/recovery-cascade-orchestration"
+    },
+    {
+      "path": "./packages/app/recovery-cascade-console"
     }
   ]
 }
